Prevent inline code elements from wrapping
This avoids things like cli commands from getting split in the middle
which makes them hard to read and instead the whole `code` element will
wrap to next line.

The only issue is looks slightly indented due to the margins on `code`.
I can't decide if I like how it looks better without them though.

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -30,6 +30,10 @@ form.newsletter input {
   box-sizing: border-box;
 }
 
+.post-content code {
+  white-space: nowrap;
+}
+
 .hidden,
 .visuallyhidden {
   border: 0;
